--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Buttons/ButtonPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Buttons/ButtonPage.xaml
@@ -2,12 +2,12 @@
 <base:ContentPageBase 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    x:Class="CraftUI.Demo.Presentation.Pages.Buttons.ButtonPage"
-    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.Buttons"
     xmlns:base="clr-namespace:CraftUI.Demo.Presentation.Common"
+    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.Controls.Buttons"
     xmlns:controls="clr-namespace:CraftUI.Library.Maui.Controls;assembly=CraftUI.Library.Maui"
-    Title="Button Demo"
-    x:DataType="page:ButtonPageViewModel">
+    x:Class="CraftUI.Demo.Presentation.Pages.Controls.Buttons.ButtonPage"
+    x:DataType="page:ButtonPageViewModel"
+    Title="Button Demo">
     
     <Grid RowDefinitions="*,Auto" > 
         <ScrollView>
