--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPopupPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPopupPage.xaml
@@ -4,11 +4,11 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:base="clr-namespace:CraftUI.Demo.Presentation.Common"
-    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.Pickers"
+    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.Controls.Pickers"
     xmlns:controls="clr-namespace:CraftUI.Library.Maui.Controls;assembly=CraftUI.Library.Maui"
     Title="Picker with Popup Demo"
     x:DataType="page:PickerPageViewModel"
-    x:Class="CraftUI.Demo.Presentation.Pages.Pickers.PickerPopupPage">
+    x:Class="CraftUI.Demo.Presentation.Pages.Controls.Pickers.PickerPopupPage">
 
     <Grid RowDefinitions="*,Auto" >
         <ScrollView>
