--- a/src/CraftUI.Demo/AppShell.xaml
+++ b/src/CraftUI.Demo/AppShell.xaml
@@ -5,6 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:const="clr-namespace:CraftUI.Demo.Presentation.Common"
     xmlns:useCases="clr-namespace:CraftUI.Demo.Presentation.Pages.UseCases"
+    xmlns:settings="clr-namespace:CraftUI.Demo.Presentation.Pages.Settings"
     xmlns:controls="clr-namespace:CraftUI.Demo.Presentation.Pages.Controls"
     FlyoutBehavior="Disabled">
 
@@ -20,6 +21,12 @@
             Route="{x:Static const:RouteConstants.UseCasesListPage}"
             Title="Use Cases">
             <ShellContent ContentTemplate="{DataTemplate useCases:UseCasesList}" />
+        </Tab>
+        <Tab
+            Icon="demo_cog.png"
+            Route="{x:Static const:RouteConstants.SettingsPage}"
+            Title="Settings">
+            <ShellContent ContentTemplate="{DataTemplate settings:SettingsPage}" />
         </Tab>
     </TabBar>
 
