--- a/src/CraftUI.Demo/Presentation/Pages/Settings/SettingsPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Settings/SettingsPage.xaml
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage 
+<?xml version="1.0" encoding="utf-8"?>
+
+<base:ContentPageBase
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.UseCases"
-    x:DataType="page:UseCasesListViewModel"
-    x:Class="CraftUI.Demo.Presentation.Pages.UseCases.UseCasesList"
-    Title="Use Cases">
+    xmlns:base="clr-namespace:CraftUI.Demo.Presentation.Common"
+    x:Class="CraftUI.Demo.Presentation.Pages.Settings.SettingsPage"
+    Title="Settings">
 
     <Grid
         RowDefinitions="*,*,3*">
@@ -16,5 +16,5 @@
             VerticalOptions="Center"
             HorizontalOptions="Center"/>
     </Grid>
-   
-</ContentPage>
+    
+</base:ContentPageBase>
