--- a/src/CraftUI.Demo/Resources/Styles/Colors.xaml
+++ b/src/CraftUI.Demo/Resources/Styles/Colors.xaml
@@ -6,11 +6,10 @@
 
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
-    <Color x:Key="Primary">#10b981</Color> <!-- Primary500 -->
-    <Color x:Key="PrimaryDark">#059669</Color> <!-- Primary600 -->
-    <Color x:Key="Secondary">#2dd4bf</Color>
-    <Color x:Key="SecondaryDark">#2dd4bf</Color>
-    <Color x:Key="SecondaryDarkText">#d4d4d4</Color>
+    <Color x:Key="Primary">#4F46E5</Color> <!-- Primary500 -->
+    <Color x:Key="PrimaryDark">#818CF8</Color> <!-- Primary600 -->
+    <Color x:Key="Secondary">#9333EA</Color>
+    <Color x:Key="SecondaryDark">#C084FC</Color>
     
     <Color x:Key="Danger">#E00034</Color>
     <Color x:Key="Success">#528922</Color>
@@ -37,16 +36,28 @@
     <Color x:Key="Gray950">#141414</Color>
     
     <!-- Primary Color Scale (Tailwind Emerald) -->
-    <Color x:Key="Primary50">#ECFDF5</Color>
-    <Color x:Key="Primary100">#D1FAE5</Color>
-    <Color x:Key="Primary200">#A7F3D0</Color>
-    <Color x:Key="Primary300">#6EE7B7</Color>
-    <Color x:Key="Primary400">#34D399</Color> 
-    <Color x:Key="Primary500">#10B981</Color> <!-- Your Current Primary -->
-    <Color x:Key="Primary600">#059669</Color> <!-- Suggested for Dark Mode -->
-    <Color x:Key="Primary700">#047857</Color>
-    <Color x:Key="Primary800">#065F46</Color>
-    <Color x:Key="Primary900">#064e3b</Color>
-    <Color x:Key="Primary950">#022c22</Color>
-
+    <Color x:Key="Primary50">#EEF2FF</Color>
+    <Color x:Key="Primary100">#E0E7FF</Color>
+    <Color x:Key="Primary200">#C7D2FE</Color>
+    <Color x:Key="Primary300">#A5B4FC</Color>
+    <Color x:Key="Primary400">#818CF8</Color>
+    <Color x:Key="Primary500">#6366F1</Color>
+    <Color x:Key="Primary600">#4F46E5</Color>
+    <Color x:Key="Primary700">#4338CA</Color>
+    <Color x:Key="Primary800">#3730A3</Color>
+    <Color x:Key="Primary900">#312E81</Color>
+    <Color x:Key="Primary950">#1E1B4B</Color>
+    
+    <Color x:Key="Secondary50">#FAF5FF</Color>
+    <Color x:Key="Secondary100">#F3E8FF</Color>
+    <Color x:Key="Secondary200">#E9D5FF</Color>
+    <Color x:Key="Secondary300">#D8B4FE</Color>
+    <Color x:Key="Secondary400">#C084FC</Color>
+    <Color x:Key="Secondary500">#A855F7</Color>
+    <Color x:Key="Secondary600">#9333EA</Color>
+    <Color x:Key="Secondary700">#7E22CE</Color>
+    <Color x:Key="Secondary800">#6D28D9</Color>
+    <Color x:Key="Secondary900">#581C87</Color>
+    <Color x:Key="Secondary950">#3B0764</Color>
+    
 </ResourceDictionary>
