--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPopupPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPopupPage.xaml
@@ -22,8 +22,7 @@
                     ItemsSource="{Binding CountriesLoader.Result}" 
                     ItemDisplay="{x:Static page:PickerPageViewModel.CountryDisplayProperty}"
                     TapCommand="{Binding CountrySelectedCommand}"
-                    ShowLoader="{Binding CountriesLoader.ShowLoader}"
-                    ActionIconSource="chevron_bottom.svg"/>
+                    ShowLoader="{Binding CountriesLoader.ShowLoader}"/>
                 
                 <controls:SaPickerPopup
                     Label="City"
