--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPopupPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPopupPage.xaml
@@ -16,7 +16,7 @@
                 Margin="16, 32"
                 Spacing="25">
                 
-                <controls:SaPickerPopup
+                <controls:CfPickerPopup
                     Label="Country"
                     SelectedItem="{Binding Country}"
                     ItemsSource="{Binding CountriesLoader.Result}" 
@@ -24,7 +24,7 @@
                     TapCommand="{Binding CountrySelectedCommand}"
                     ShowLoader="{Binding CountriesLoader.ShowLoader}"/>
                 
-                <controls:SaPickerPopup
+                <controls:CfPickerPopup
                     Label="City"
                     SelectedItem="{Binding City}"
                     ItemsSource="{Binding CitiesLoader.Result}"
