--- a/src/CraftUI.Library.Maui/Controls/CfEntry.xaml
+++ b/src/CraftUI.Library.Maui/Controls/CfEntry.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:common="clr-namespace:CraftUI.Library.Maui.Common"
-    x:Class="CraftUI.Library.Maui.Controls.SaEntry">
+    x:Class="CraftUI.Library.Maui.Controls.CfEntry">
     <common:LabelBase.View>
         <Entry x:Name="Element" />
     </common:LabelBase.View>
