--- a/src/CraftUI.Library.Maui/Controls/CfPicker.xaml
+++ b/src/CraftUI.Library.Maui/Controls/CfPicker.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:common="clr-namespace:CraftUI.Library.Maui.Common"
-    x:Class="CraftUI.Library.Maui.Controls.SaPicker">
+    x:Class="CraftUI.Library.Maui.Controls.CfPicker">
     
     <common:LabelBase.Resources>
         <Style x:Key="PickerLabel" TargetType="Picker">
