feat: improves button styles and UI elements
Adds a "Plain" button style to the demo app.
Renames `ShowLoader` property to `IsLoading` for clarity and consistency
across different UI elements (Entry, Picker, PickerPopup).
This change provides a more intuitive API for indicating loading states.

--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Buttons/ButtonPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Buttons/ButtonPage.xaml
@@ -27,6 +27,10 @@
                     Text="Disabled button"
                     IsEnabled="False" />
                 
+                <controls:CfButton 
+                    Style="{StaticResource PlainPrimaryCfButton}"
+                    Text="Plain button" />
+                
             </VerticalStackLayout>
         </ScrollView>
     </Grid>
