--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Pickers/PickerPage.xaml
@@ -22,14 +22,14 @@
                     ItemsSource="{Binding CountriesLoader.Result}" 
                     ItemDisplay="{x:Static page:PickerPageViewModel.CountryDisplayProperty}"
                     TapCommand="{Binding CountrySelectedCommand}"
-                    ShowLoader="{Binding CountriesLoader.ShowLoader}" />
+                    IsLoading="{Binding CountriesLoader.ShowLoader}" />
                 
                 <controls:CfPicker
                     Label="City"
                     SelectedItem="{Binding City}"
                     ItemsSource="{Binding CitiesLoader.Result}"
                     ItemDisplay="{x:Static page:PickerPageViewModel.CityDisplayProperty}"
-                    ShowLoader="{Binding CitiesLoader.ShowLoader}" />
+                    IsLoading="{Binding CitiesLoader.ShowLoader}" />
                 
             </VerticalStackLayout>
         </ScrollView>
