--- a/src/CraftUI.Demo/Resources/Styles/Buttons.xaml
+++ b/src/CraftUI.Demo/Resources/Styles/Buttons.xaml
@@ -1,5 +1,6 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                    xmlns:controls="clr-namespace:CraftUI.Library.Maui.Controls;assembly=CraftUI.Library.Maui">
     
     <Style x:Key="BaseButton" TargetType="Button">
         <Setter Property="FontSize" Value="16" />
@@ -14,5 +15,21 @@
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Surface}, Dark={StaticResource SurfaceDark}}" />
         <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}" />
     </Style>
+    
+    <Style x:Key="PlainPrimaryButton" BasedOn="{StaticResource BaseButton}" TargetType="Button">
+        <Setter Property="TextColor" Value="{StaticResource Primary}" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
+    </Style>
+
+    <Style x:Key="FilledPrimaryCfButton" TargetType="controls:CfButton">
+        <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource Surface}, Dark={StaticResource SurfaceDark}}" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource PrimaryDark}}" />
+    </Style>
+    
+    <Style x:Key="PlainPrimaryCfButton" TargetType="controls:CfButton">
+        <Setter Property="TextColor" Value="{StaticResource Primary}" />
+        <Setter Property="BackgroundColor" Value="Transparent" />
+    </Style>
+
     
 </ResourceDictionary>
