--- a/src/CraftUI.Demo/Presentation/Pages/Controls/Entries/EntryPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/Entries/EntryPage.xaml
@@ -3,9 +3,9 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:base="clr-namespace:CraftUI.Demo.Presentation.Common"
-    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.Controls.Entry"
+    xmlns:page="clr-namespace:CraftUI.Demo.Presentation.Pages.Controls.Entries"
     xmlns:controls="clr-namespace:CraftUI.Library.Maui.Controls;assembly=CraftUI.Library.Maui"
-    x:Class="CraftUI.Demo.Presentation.Pages.Controls.Entry.EntryPage"
+    x:Class="CraftUI.Demo.Presentation.Pages.Controls.Entries.EntryPage"
     x:DataType="page:EntryPageViewModel"
     Title="Entry Demo">
     
@@ -45,6 +45,11 @@
                     IsReadOnly="True"
                     ActionIconSource="demo_new_window.png"
                     ActionIconCommand="{Binding OpenWebsiteCommand}" />
+
+                <controls:CfEntry
+                    Label="Country"
+                    IsEnabled="False"
+                    Text="France" />
 
             </VerticalStackLayout>
         </ScrollView>
