--- a/src/CraftUI.Demo/Resources/Styles/Layouts.xaml
+++ b/src/CraftUI.Demo/Resources/Styles/Layouts.xaml
@@ -13,4 +13,20 @@
         <Setter Property="Padding" Value="{markup:Gutter All=1}" />
     </Style>
     
+    <Style x:Key="CollectionViewItemHorizontalStackLayout" TargetType="HorizontalStackLayout">
+        <Setter Property="Padding" Value="10" />
+        <Setter Property="VisualStateManager.VisualStateGroups">
+            <VisualStateGroupList>
+                <VisualStateGroup Name="CommonStates">
+                    <VisualState Name="Normal" />
+                    <VisualState Name="Selected">
+                        <VisualState.Setters>
+                            <Setter Property="BackgroundColor" Value="{StaticResource Primary100}" />
+                        </VisualState.Setters>
+                    </VisualState>
+                </VisualStateGroup>
+            </VisualStateGroupList>
+        </Setter>
+    </Style>
+    
 </ResourceDictionary>
