--- a/src/CraftUI.Library.Maui/Controls/Popups/CfCollectionMultiSelectionPopup.xaml
+++ b/src/CraftUI.Library.Maui/Controls/Popups/CfCollectionMultiSelectionPopup.xaml
@@ -3,7 +3,7 @@
 <toolkit:Popup
     HorizontalOptions="Fill"
     VerticalOptions="End"
-    x:Class="CraftUI.Library.Maui.Controls.Popups.CfCollectionPopup"
+    x:Class="CraftUI.Library.Maui.Controls.Popups.CfCollectionMultiSelectionPopup"
     x:Name="This"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
@@ -39,7 +39,7 @@
         BindingContext="{x:Reference This}"
         RowDefinitions="Auto,Auto"
         Style="{StaticResource BottomPopupRootGrid}"
-        x:DataType="controls:CfCollectionPopup">
+        x:DataType="controls:CfCollectionSingleSelectionPopup">
         
         <VerticalStackLayout>
             <VerticalStackLayout Padding="16">
