fix: removes Android background color setting
Removes the redundant setting of background color on Android.
The background is already being set to null, so further
customization is unnecessary.

Also, updates the DatePickerPage title for clarity.

--- a/src/CraftUI.Demo/Presentation/Pages/Controls/DatePickers/DatePickerPage.xaml
+++ b/src/CraftUI.Demo/Presentation/Pages/Controls/DatePickers/DatePickerPage.xaml
@@ -8,7 +8,7 @@
     xmlns:controls="clr-namespace:CraftUI.Library.Maui.Controls;assembly=CraftUI.Library.Maui"
     x:Class="CraftUI.Demo.Presentation.Pages.Controls.DatePickers.DatePickerPage"
     x:DataType="page:DatePickerPageViewModel"
-    Title="Button Demo">
+    Title="Date Picker Demo">
     
     <Grid RowDefinitions="*,Auto" > 
         <ScrollView>
