--- a/src/CraftUI.Library.Maui/Controls/Popups/CfCollectionMultiSelectionPopup.xaml
+++ b/src/CraftUI.Library.Maui/Controls/Popups/CfCollectionMultiSelectionPopup.xaml
@@ -67,7 +67,7 @@
             ItemSizingStrategy="MeasureFirstItem"
             ItemsLayout="VerticalList"
             ItemsSource="{Binding ItemsSource}"
-            SelectionMode="Single"
+            SelectionMode="Multiple"
             x:Name="PickerCollectionView">
         </CollectionView>
         
